fix jumpiness of tooltips; refs #29

--- a/app/assets/stylesheets/partials/_layout-models.scss
+++ b/app/assets/stylesheets/partials/_layout-models.scss
@@ -1960,6 +1960,7 @@ Compare and Rank
   line-height: 1em;
   
   &.ui-tooltip {
+	  position: absolute !important; // Fixes "jumpiness" of tooltips
 		color: #FFF;
 		background: $dark_gray;
 		width: 90px;
